Moved to angular 20

--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -137,7 +137,7 @@
         <div>
           <h4>Ajuda</h4>
           <a href="#">FAQ</a>
-          <a href="mailto:suporte@tabelaterapeutica.pt">suporte@tabelaterapeutica.pt</a>
+          <a href="mailto:suporte@tabelaterapeutica.pt">suporte&#64;tabelaterapeutica.pt</a>
         </div>
         <div>
           <h4>Siga-nos</h4>
